# evinventory

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql.yml  continuous-integration.yml  dependency-review.yml  scorecards.yml
src/: manage.py
src/evinventory/: asgi.py  env.py  settings.py  urls.py  wsgi.py
src/evinventory/django/: base.py  local.py
tests/: admin_test.py
