[project]
name = "evinventory"
version = "0.1.0"
description = "A simple Django app to record my stuff"
authors = [
    {name = "Evan Porter", email = "evan.porter@dotman.ca"},
]
dependencies = [
    "Django>=5.0.7",
    "django-environ>=0.11.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
server.cmd = "python src/manage.py runserver"
server.env_file = ".env"
generate-key = {cmd = [
    "python",
    "src/manage.py",
    "shell",
    "-c",
    "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
], help = "Generates a secure, secret key"}