[project]
name = "evinventory"
version = "0.1.0"
description = "A simple Django app to record my stuff"
authors = [
    {name = "Evan Porter", email = "evan.porter@dotman.ca"},
]
dependencies = [
    "Django>=5.0.7",
    "django-environ>=0.11.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true # Needs to be true to have an 'editable' install

[tool.pdm.scripts]
manage.cmd = "python src/manage.py"
manage.env_file = ".env"
manage.help = "Runs the Django project management script"

server.cmd = "python src/manage.py runserver"
server.env_file = ".env"
server.help = "Runs the development server"

django-admin.shell = "cd src; django-admin"
django-admin.env_file = ".env"
django-admin.help = "Runs the Django Admin script"

generate-key.cmd = [
    "python",
    "src/manage.py",
    "shell",
    "-c",
    "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
]
generate-key.help = "Generates a secure, secret key"